src/test/ui/type/type-check/issue-40294.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-40294.rs:5:4
   |
LL | trait Foo: Sized {
   | ---------------- required by `Foo`
...
LL | fn foo<'a,'b,T>(x: &'a T, y: &'b T)
   |    ^^^ cannot infer type for reference `&'a T`
   |
   = note: cannot resolve `&'a T: Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
